force-app/main/default/objects/Index__c/Index__c.object-meta.xml
<CustomObject>
    <label>Index</label>
    <nameField>
        <label>Index Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Indexes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>