force-app/main/default/objects/Index__c/fields/Adder_Current_Year_Plus1__c.field-meta.xml
<CustomField>
    <fullName>Adder_Current_Year_Plus1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Adder for Current Year Plus 1 for NYMEX Bid Ask Last price based on buy back or sell.</description>
    <inlineHelpText>Adder for Current Year Plus 1 for NYMEX Bid Ask Last price based on buy back or sell.</inlineHelpText>
    <label>Adder - Current Year Plus1</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>