force-app/main/default/objects/Index__c/fields/All_Locations__c.field-meta.xml
<CustomField>
    <fullName>All_Locations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Locations</label>
    <type>Checkbox</type>
</CustomField>