force-app/main/default/objects/Index__c/fields/All_Rates__c.field-meta.xml
<CustomField>
    <fullName>All_Rates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This index can be used for all rate types (index adder, over adder, under adder)</description>
    <inlineHelpText>This index can be used for all rate types (index adder, over adder, under adder)</inlineHelpText>
    <label>All Rates</label>
    <type>Checkbox</type>
</CustomField>