force-app/main/default/objects/Index__c/fields/Applicable_Location_List__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Location_List__c</fullName>
    <formula>IF ( All_Locations__c 
  , &#39;CEIP-Houston, CES-Houston, CES-St Louis, CES-Illinois, CES-Minnesota&#39;
  , IF ( Location_Specific_Rate__c 
      , CES_Location_1__r.Name + &#39;, &#39; + 
        CES_Location_2__r.Name + &#39;, &#39; +
        CES_Location_3__r.Name + &#39;, &#39; +
        CES_Location_4__r.Name + &#39;, &#39; +
        CES_Location_5__r.Name
      , &#39;&#39;
     )
)</formula>
    <label>Applicable Location List</label>
    <type>Text</type>
</CustomField>