force-app/main/default/objects/Index__c/fields/Calculated__c.field-meta.xml
<CustomField>
    <fullName>Calculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculated</label>
    <type>Checkbox</type>
</CustomField>