force-app/main/default/objects/Index__c/fields/CEIP_Rate_ID__c.field-meta.xml
<CustomField>
    <fullName>CEIP_Rate_ID__c</fullName>
    <label>CEIP Rate ID</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>