force-app/main/default/objects/Index__c/fields/CES_Location_3__c.field-meta.xml
<CustomField>
    <fullName>CES_Location_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CES Location 3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>CES Location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Indexes for this Location 3</relationshipLabel>
    <relationshipName>Indexes3</relationshipName>
    <type>Lookup</type>
</CustomField>