force-app/main/default/objects/Index__c/fields/Contract_Charge_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contract_Charge_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This index can be selected for a contract charge lookup rate</description>
    <inlineHelpText>This index can be selected for a contract charge lookup rate</inlineHelpText>
    <label>Contract Charge Rate</label>
    <type>Checkbox</type>
</CustomField>