force-app/main/default/objects/Index__c/fields/Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Value__c</fullName>
    <description>Current/Most Recent value of the index</description>
    <inlineHelpText>Current/Most Recent value of the index</inlineHelpText>
    <label>Current Value</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>