force-app/main/default/objects/Index__c/fields/Description2__c.field-meta.xml
<CustomField>
    <fullName>Description2__c</fullName>
    <description>The second part, if the description is really long</description>
    <inlineHelpText>The second part, if the description is really long</inlineHelpText>
    <label>Description2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>