force-app/main/default/objects/Index__c/fields/Description_Long__c.field-meta.xml
<CustomField>
    <fullName>Description_Long__c</fullName>
    <label>Description Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>