force-app/main/default/objects/Index__c/fields/Endur_Index_Id__c.field-meta.xml
<CustomField>
    <fullName>Endur_Index_Id__c</fullName>
    <externalId>true</externalId>
    <label>Endur Index Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>