force-app/main/default/objects/Index__c/fields/Exchange__c.field-meta.xml
<CustomField>
    <fullName>Exchange__c</fullName>
    <description>Which exchange we&#39;re getting data from (needed for data import)</description>
    <inlineHelpText>Which exchange we&#39;re getting data from (needed for data import)</inlineHelpText>
    <label>Exchange</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CME</fullName>
            </value>
            <value>
                <fullName>NYMEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>