force-app/main/default/objects/Index__c/fields/Fixed_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This rate can be used as the basis for Fixed Rate locks</description>
    <inlineHelpText>This rate can be used as the basis for Fixed Rate locks</inlineHelpText>
    <label>Fixed Rate</label>
    <type>Checkbox</type>
</CustomField>