force-app/main/default/objects/Index__c/fields/Frequency_and_Name__c.field-meta.xml
<CustomField>
    <fullName>Frequency_and_Name__c</fullName>
    <formula>TEXT(Frequency__c) &amp; &quot;: &quot; &amp; Name</formula>
    <label>Frequency and Name</label>
    <type>Text</type>
</CustomField>