force-app/main/default/objects/Index__c/fields/Frequency_and_Type__c.field-meta.xml
<CustomField>
    <fullName>Frequency_and_Type__c</fullName>
    <formula>TEXT(Frequency__c) &amp; &quot;: &quot; &amp; Record_Type_Name__c</formula>
    <label>Frequency and Type</label>
    <type>Text</type>
</CustomField>