force-app/main/default/objects/Index__c/fields/Fuel_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Percentage__c</fullName>
    <label>Fuel Percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>