force-app/main/default/objects/Index__c/fields/Fuel_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuel Rate</label>
    <type>Checkbox</type>
</CustomField>