force-app/main/default/objects/Index__c/fields/GEM_ID__c.field-meta.xml
<CustomField>
    <fullName>GEM_ID__c</fullName>
    <label>GEM ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>