force-app/main/default/objects/Index__c/fields/GEM_Name__c.field-meta.xml
<CustomField>
    <fullName>GEM_Name__c</fullName>
    <label>GEM Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>