force-app/main/default/objects/Index__c/fields/Historic_Chart_Link__c.field-meta.xml
<CustomField>
    <fullName>Historic_Chart_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://na1.salesforce.com/00O300000086txS?pv0=&quot;&amp; Id , &quot;View Chart&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Historic Chart Link</label>
    <type>Text</type>
</CustomField>