force-app/main/default/objects/Index__c/fields/HOU_Basis_ID__c.field-meta.xml
<CustomField>
    <fullName>HOU_Basis_ID__c</fullName>
    <inlineHelpText>External Basis ID for this Index</inlineHelpText>
    <label>HOU Basis ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>