force-app/main/default/objects/Index__c/fields/HOU_Rate_ID__c.field-meta.xml
<CustomField>
    <fullName>HOU_Rate_ID__c</fullName>
    <externalId>true</externalId>
    <label>HOU Rate ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>