force-app/main/default/objects/Index__c/fields/Index_cost__c.field-meta.xml
<CustomField>
    <fullName>Index_cost__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cost of gas from the index.  For NYMEX, this is the collateral and exchange fee.  For trading points, it&#39;s the cost of delivery from the point to the pool.</description>
    <inlineHelpText>Cost of gas from the index.  For NYMEX, this is the collateral and exchange fee.  For trading points, it&#39;s the cost of delivery from the point to the pool.</inlineHelpText>
    <label>Index cost</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>