force-app/main/default/objects/Index__c/fields/Index_Rate__c.field-meta.xml
<CustomField>
    <fullName>Index_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This index can be used as an index rate</description>
    <inlineHelpText>This index can be used as an index rate</inlineHelpText>
    <label>Index Rate</label>
    <type>Checkbox</type>
</CustomField>