force-app/main/default/objects/Index__c/fields/Is_Percent_of_Index__c.field-meta.xml
<CustomField>
    <fullName>Is_Percent_of_Index__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is this index a percent of another index?</description>
    <inlineHelpText>is this index a percent of another index?</inlineHelpText>
    <label>Is Percent of Index</label>
    <type>Checkbox</type>
</CustomField>