force-app/main/default/objects/Index__c/fields/Location_Specific_Rate__c.field-meta.xml
<CustomField>
    <fullName>Location_Specific_Rate__c</fullName>
    <formula>AND (
  NOT( All_Locations__c )
  , OR (
      CES_Location_1__c &lt;&gt; null,
      CES_Location_2__c &lt;&gt; null,
      CES_Location_3__c &lt;&gt; null,
      CES_Location_4__c &lt;&gt; null,
      CES_Location_5__c &lt;&gt; null
     )
)</formula>
    <label>Location Specific Rate</label>
    <type>Checkbox</type>
</CustomField>