force-app/main/default/objects/Index__c/fields/MPLS_Basis_ID__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Basis_ID__c</fullName>
    <inlineHelpText>External Basis ID for this Index</inlineHelpText>
    <label>MPLS Basis ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>