force-app/main/default/objects/Index__c/fields/MPLS_Rate_ID__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Rate_ID__c</fullName>
    <externalId>true</externalId>
    <label>MPLS Rate ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>