force-app/main/default/objects/Index__c/fields/New_Safari_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Safari_Name__c</fullName>
    <externalId>true</externalId>
    <label>New Safari Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>