force-app/main/default/objects/Index__c/fields/Old_Safari_Name__c.field-meta.xml
<CustomField>
    <fullName>Old_Safari_Name__c</fullName>
    <label>Old Safari Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>