force-app/main/default/objects/Index__c/fields/Origin_DB__c.field-meta.xml
<CustomField>
    <fullName>Origin_DB__c</fullName>
    <description>Which Safari database did this start out in?</description>
    <inlineHelpText>Which Safari database did this start out in?</inlineHelpText>
    <label>Origin DB</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEIP</fullName>
            </value>
            <value>
                <fullName>HOU</fullName>
            </value>
            <value>
                <fullName>LIVE</fullName>
            </value>
            <value>
                <fullName>MPLS</fullName>
            </value>
            <value>
                <fullName>STL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>