force-app/main/default/objects/Index__c/fields/Over_Rate__c.field-meta.xml
<CustomField>
    <fullName>Over_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This index can be selected for an over rate</description>
    <inlineHelpText>This index can be selected for an over rate</inlineHelpText>
    <label>Over Rate</label>
    <type>Checkbox</type>
</CustomField>