force-app/main/default/objects/Index__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <description>The index can be used by facilities on this pipeline</description>
    <inlineHelpText>The index can be used by facilities on this pipeline</inlineHelpText>
    <label>Pipeline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANR</fullName>
            </value>
            <value>
                <fullName>CEGT</fullName>
            </value>
            <value>
                <fullName>CIPL</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>KMIT</fullName>
            </value>
            <value>
                <fullName>MGT</fullName>
            </value>
            <value>
                <fullName>MRT</fullName>
            </value>
            <value>
                <fullName>NBPL</fullName>
            </value>
            <value>
                <fullName>NGPL</fullName>
            </value>
            <value>
                <fullName>NNG</fullName>
            </value>
            <value>
                <fullName>Panhandle</fullName>
            </value>
            <value>
                <fullName>TIGT</fullName>
            </value>
            <value>
                <fullName>Trailblazer</fullName>
            </value>
            <value>
                <fullName>Trunkline</fullName>
            </value>
            <value>
                <fullName>Viking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>