force-app/main/default/objects/Index__c/fields/Pipeline_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline Lookup</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Indexes</relationshipLabel>
    <relationshipName>Indexes</relationshipName>
    <type>Lookup</type>
</CustomField>