force-app/main/default/objects/Index__c/fields/PrdId__c.field-meta.xml
<CustomField>
    <fullName>PrdId__c</fullName>
    <label>PrdId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>