force-app/main/default/objects/Index__c/fields/Prompt_Month__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Month__c</fullName>
    <label>Prompt Month</label>
    <length>20</length>
    <type>Text</type>
</CustomField>