force-app/main/default/objects/Index__c/fields/Prompt_Month_Last_Trading_Day__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Month_Last_Trading_Day__c</fullName>
    <label>Prompt Month Last Trading Day</label>
    <type>Date</type>
</CustomField>