force-app/main/default/objects/Index__c/fields/Publication_2__c.field-meta.xml
<CustomField>
    <fullName>Publication_2__c</fullName>
    <label>Publication 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IF</fullName>
            </value>
            <value>
                <fullName>GD</fullName>
            </value>
            <value>
                <fullName>NGI</fullName>
            </value>
            <value>
                <fullName>GSPL</fullName>
            </value>
            <value>
                <fullName>NYMEX</fullName>
            </value>
            <value>
                <fullName>CGPR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>