force-app/main/default/objects/Index__c/fields/Publication__c.field-meta.xml
<CustomField>
    <fullName>Publication__c</fullName>
    <description>Where is this index published?</description>
    <inlineHelpText>Where is this index published?</inlineHelpText>
    <label>Publication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IF</fullName>
            </value>
            <value>
                <fullName>GD</fullName>
            </value>
            <value>
                <fullName>NYMEX</fullName>
            </value>
            <value>
                <fullName>NGI</fullName>
            </value>
            <value>
                <fullName>GSPL</fullName>
            </value>
            <value>
                <fullName>CGPR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>