force-app/main/default/objects/Index__c/fields/Publication_Section__c.field-meta.xml
<CustomField>
    <fullName>Publication_Section__c</fullName>
    <label>Publication Section</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Publication__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>IF</fullName>
            </value>
            <value>
                <fullName>GD</fullName>
            </value>
            <value>
                <fullName>Appalachia</fullName>
            </value>
            <value>
                <fullName>Canadian Gas</fullName>
            </value>
            <value>
                <fullName>Citygates</fullName>
            </value>
            <value>
                <fullName>East Texas-North Louisiana Area</fullName>
            </value>
            <value>
                <fullName>East-Houston-Katy</fullName>
            </value>
            <value>
                <fullName>Louisiana-Onshore South</fullName>
            </value>
            <value>
                <fullName>Mississippi-Alabama</fullName>
            </value>
            <value>
                <fullName>Oklahoma</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Rockies</fullName>
            </value>
            <value>
                <fullName>South-Corpus Christi</fullName>
            </value>
            <value>
                <fullName>Northern Natural Gas Co</fullName>
            </value>
            <value>
                <fullName>Upper Midwest</fullName>
            </value>
            <value>
                <fullName>ANR Pipeline Co</fullName>
            </value>
            <value>
                <fullName>CenterPoint Energy Gas Transmission Co</fullName>
            </value>
            <value>
                <fullName>Colorado Interstate Gas Co</fullName>
            </value>
            <value>
                <fullName>East Texas</fullName>
            </value>
            <value>
                <fullName>Florida Gas Transmission Co</fullName>
            </value>
            <value>
                <fullName>Natural Gas Pipeline Co of America</fullName>
            </value>
            <value>
                <fullName>Northeast</fullName>
            </value>
            <value>
                <fullName>Northwest Pipeline Corp</fullName>
            </value>
            <value>
                <fullName>Oneok Gas Transportation LLC</fullName>
            </value>
            <value>
                <fullName>Panhandle Eastern Pipe Line Co</fullName>
            </value>
            <value>
                <fullName>Rockies/Northwest</fullName>
            </value>
            <value>
                <fullName>South Louisiana</fullName>
            </value>
            <value>
                <fullName>Southern Star Central Gas Pipeline Inc</fullName>
            </value>
            <value>
                <fullName>Tennessee Gas Pipeline Co</fullName>
            </value>
            <value>
                <fullName>Texas Eastern Transmission Corp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>