force-app/main/default/objects/Index__c/fields/Published_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Published_Name_2__c</fullName>
    <label>Published Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>