force-app/main/default/objects/Index__c/fields/Published_Settlement_Index__c.field-meta.xml
<CustomField>
    <fullName>Published_Settlement_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Published Settlement Index</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Indexes</relationshipLabel>
    <relationshipName>Indexes</relationshipName>
    <type>Lookup</type>
</CustomField>