force-app/main/default/objects/Index__c/fields/School_Program__c.field-meta.xml
<CustomField>
    <fullName>School_Program__c</fullName>
    <label>School Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KJUMP</fullName>
            </value>
            <value>
                <fullName>Laclede</fullName>
            </value>
            <value>
                <fullName>MOPRC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>