force-app/main/default/objects/Index__c/fields/Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Service_Level__c</fullName>
    <label>Service Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Firm</fullName>
            </value>
            <value>
                <fullName>Interruptible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>