force-app/main/default/objects/Index__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Two-letter state abbreviation.</description>
    <inlineHelpText>Two-letter state abbreviation.</inlineHelpText>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>