force-app/main/default/objects/Index__c/fields/STL_Rate_ID__c.field-meta.xml
<CustomField>
    <fullName>STL_Rate_ID__c</fullName>
    <externalId>true</externalId>
    <label>STL Rate ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>