force-app/main/default/objects/Index__c/fields/Strike_Price__c.field-meta.xml
<CustomField>
    <fullName>Strike_Price__c</fullName>
    <description>In Dollars.</description>
    <inlineHelpText>In Dollars.</inlineHelpText>
    <label>Strike Price</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>