force-app/main/default/objects/Index__c/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <description>Product Symbol for data lookup</description>
    <inlineHelpText>Product Symbol for data lookup</inlineHelpText>
    <label>Symbol</label>
    <length>10</length>
    <type>Text</type>
</CustomField>