force-app/main/default/objects/Index__c/fields/Tariff_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tariff_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is this a tariff rate?</description>
    <inlineHelpText>is this a tariff rate?</inlineHelpText>
    <label>Tariff Rate</label>
    <type>Checkbox</type>
</CustomField>