force-app/main/default/objects/Index__c/fields/Tax_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Sub_Type__c</fullName>
    <label>Tax Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Capable</fullName>
            </value>
            <value>
                <fullName>Incapable Oil Well</fullName>
            </value>
            <value>
                <fullName>Incapable Gas Well</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>