force-app/main/default/objects/Index__c/fields/Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type__c</fullName>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conservation Tax</fullName>
            </value>
            <value>
                <fullName>Excise Tax</fullName>
            </value>
            <value>
                <fullName>Severance Tax</fullName>
            </value>
            <value>
                <fullName>Oklahoma Energy Tax</fullName>
            </value>
            <value>
                <fullName>State Tax</fullName>
            </value>
            <value>
                <fullName>County Tax</fullName>
            </value>
            <value>
                <fullName>City Tax</fullName>
            </value>
            <value>
                <fullName>Gross Production Tax</fullName>
            </value>
            <value>
                <fullName>Energy Reserve Tax</fullName>
            </value>
            <value>
                <fullName>Production Excise Tax</fullName>
            </value>
            <value>
                <fullName>Marginal Gas Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>