force-app/main/default/objects/Index__c/fields/Under_Rate__c.field-meta.xml
<CustomField>
    <fullName>Under_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This index can be used as an under rate</description>
    <inlineHelpText>This index can be used as an under rate</inlineHelpText>
    <label>Under Rate</label>
    <type>Checkbox</type>
</CustomField>