force-app/main/default/objects/Index__c/fields/Use_WACOG_for_MP__c.field-meta.xml
<CustomField>
    <fullName>Use_WACOG_for_MP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>use the wacog languague for market price instead of the standard market price language</description>
    <label>Use WACOG for MP</label>
    <type>Checkbox</type>
</CustomField>