force-app/main/default/objects/Index__c/fields/Utility_1__c.field-meta.xml
<CustomField>
    <fullName>Utility_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility 1</label>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipLabel>Indexes</relationshipLabel>
    <relationshipName>Indexes</relationshipName>
    <type>Lookup</type>
</CustomField>