force-app/main/default/objects/Index__c/fields/Utility_2__c.field-meta.xml
<CustomField>
    <fullName>Utility_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility 2</label>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipLabel>Indexes (Utility 2)</relationshipLabel>
    <relationshipName>Indexes1</relationshipName>
    <type>Lookup</type>
</CustomField>