force-app/main/default/objects/Index__c/fields/Utility_3__c.field-meta.xml
<CustomField>
    <fullName>Utility_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility 3</label>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipLabel>Indexes (Utility 3)</relationshipLabel>
    <relationshipName>Indexes2</relationshipName>
    <type>Lookup</type>
</CustomField>